--- a/apps/model_catalog/package.json
+++ b/apps/model_catalog/package.json
@@ -7,6 +7,7 @@
         "@material-ui/icons": "^4.5.1",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "axios": "^0.21.1",
+        "cross-env": "^7.0.3",
         "eslint-config-react-app": "^5.2.1",
         "eslint-plugin-flowtype": "^5.2.0",
         "eslint-plugin-import": "^2.22.1",
@@ -36,7 +37,7 @@
         "styled-components": "^5.2.1"
     },
     "scripts": {
-        "start": "HTTPS=true react-scripts start",
+        "start": "cross-env HTTPS=true react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
