--- a/apps/model_catalog/package.json
+++ b/apps/model_catalog/package.json
@@ -24,8 +24,8 @@
         "notistack": "^0.9.17",
         "plotly.js": "^1.57.1",
         "prop-types": "^15.7.2",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
         "react-lines-ellipsis": "^0.15.0",
         "react-markdown": "^4.3.1",
         "react-mathjax": "^1.0.1",
@@ -61,7 +61,11 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
         "cypress": "^7.2.0",
+        "jest": "^26.6.0",
         "prettier": "^2.3.0",
         "react-hot-loader": "^4.13.0",
         "start-server-and-test": "^1.12.2"
