--- a/apps/model_catalog/package.json
+++ b/apps/model_catalog/package.json
@@ -3,9 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@material-ui/core": "^4.11.1",
         "@material-ui/icons": "^4.5.1",
         "@material-ui/lab": "^4.0.0-alpha.61",
+        "@mui/material": "^5.14.11",
+        "@mui/styles": "^5.14.11",
         "axios": "^0.21.1",
         "cross-env": "^7.0.3",
         "eslint-config-react-app": "^5.2.1",
