--- a/apps/deployment/Dockerfile.prod
+++ b/apps/deployment/Dockerfile.prod
@@ -4,7 +4,7 @@
 # as it contains only the final built app
 
 # build environment
-FROM docker-registry.ebrains.eu/model-catalog/node:16-alpine as build
+FROM docker-registry.ebrains.eu/model-catalog/node:22-alpine as build
 
 WORKDIR /model-catalog
 ENV PATH /model-catalog/node_modules/.bin:$PATH
@@ -26,7 +26,7 @@ RUN npm run build
 # production environment
 FROM docker-registry.ebrains.eu/model-catalog/nginx:stable-alpine
 COPY deployment/nginx-app.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /model-catalog/build /usr/share/nginx/html/model-catalog
+COPY --from=build /model-catalog/dist /usr/share/nginx/html/model-catalog
 COPY --from=build /curation-dashboard/build /usr/share/nginx/html/curation-dashboard
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
